--- a/index.html
+++ b/index.html
@@ -3,30 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>KASaleSystem</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144208445-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-144208445-2');
-    </script>
-    <!--Baidu Analytics-->
-    <script>
-      let _hmt = _hmt || [];
-      (function() {
-        let hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?8b02a318fde5831da10426656a43d03c";
-        let s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
+    <title>TicketManageSystem</title>
   </head>
   <body>
-    <!--<script src="./static/tinymce4.7.5/tinymce.min.js"></script>-->
-    <script src="https://unpkg.com/tinymce@4.7.5/tinymce.min.js"></script>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
